--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -56,8 +56,8 @@ group vomss://grid-voms.desy.de:8443/voms/ilc ilc
 # USER-VO-MAP sbgrid SBGrid -- 33 -- Ian Levesque (ian@crystal.harvard.edu)
 group vomss://hpc.sbgrid.org:8443/voms/SBGrid sbgrid
 #-------------------
-# USER-VO-MAP cigi CIGI -- 34 -- Shaowen Wang (shaowen@uiuc.edu)
-group vomss://voms.cigi.uiuc.edu:8443/voms/cigi cigi
+# USER-VO-MAP cigi CIGI -- 34 -- Anand Padmanabhan (apadmana@uiuc.edu)
+group vomss://vm246.roger.ncsa.illinois.edu:8443/voms/CIGI CIGI
 #-------------------
 # USER-VO-MAP icecube IceCube -- 35 -- Steve Barnet (barnet@icecube.wisc.edu)
 group vomss://grid-voms.desy.de:8443/voms/icecube icecube
@@ -126,7 +126,7 @@ group vomss://voms.hep.wisc.edu:8443/voms/lz lz
 group vomss://voms.fnal.gov:8443/voms/dune dune
 #-------------------
 #USER-VO-MAP project8 PROJECT8 -- 66 -- Malachi Schram (malachi.schram@pnnl.gov)
-group vomss://voms.hep.pnnl.gov:8443/voms/project8
+group vomss://voms.hep.pnnl.gov:8443/voms/project8 project8
 #-------------------
 #USER-VO-MAP miniclean MINICLEAN -- 67 -- Malachi Schram (malachi.schram@pnnl.gov)
-group vomss://voms.hep.pnnl.gov:8443/voms/miniclean
+group vomss://voms.hep.pnnl.gov:8443/voms/miniclean miniclean
