--- a/.github/workflows/validate-travis.yml
+++ b/.github/workflows/validate-travis.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: validate Travis
+    - name: validate vomses
       run: bin/vomses-crosscheck vomses vomsdir
